# complementary_products_suggestions

./: README.md  dummy_sample_content.csv  dummy_sample_matches.csv  pyproject.toml  readme.ipynb  scripts.py
complementary_products_suggestions/: config.py  data_preprocessing.py  embeddings.py  helper_functions.py
notebooks/: 03-CNN_vs._LSTM.ipynb  04-LSTM_embeddings_tests.ipynb  05-baselines.ipynb  06-LSTM_to_KNN.ipynb
