[tool.poetry]
name = "complementary_products_suggestions"
version = "0.1.1"
description = ""
authors = ["marinaangelovska <marina.angelovska10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
jupyterlab = "^1.2.6"
matplotlib = "^3.1.3"
seaborn = "^0.10.0"
numpy = "^1.16.1"
pandas = "^1.0.1"
bs4 = "^0.0.1"
tqdm = "^4.43.0"
keras = "^2.3.1"
opencv-python = "^4.2.0"
tensorflow = "^2.1.0"
spacy = "^2.2.3"
sklearn = "^0.0"
guppy3 = "^3.0.9"
pandas_ml = "^0.6.1"
tensorflow-cpu = "^2.1.0"
nltk = "^3.4.5"
gensim = "^3.8.1"
scipy = "^1.4.1"
scikit-plot = '^0.1'
graphviz = "^0.13.2"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
run = 'scripts:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
